# zero2prod

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  sqlx-data.json
.github/workflows/: general.yml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
