[package]
edition = "2018"
name = "zero2prod"
version = "0.1.0"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-http = "=3.0.0-beta.9"
actix-web = "=4.0.0-beta.8"
chrono = "0.4.19"
config = "0.11.0"
serde = {version = "1", features = ["derive"]}
tracing = {version = "0.1", features = ["log"]}
tracing-actix-web = "0.4.0-beta.8"
tracing-bunyan-formatter = "0.1.6"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = {version = "0.2.12", features = ["registry", "env-filter"]}
unicode-segmentation = "1.8.0"
uuid = {version = "0.8.2", features = ["serde", "v4"]}
validator = "0.14.0"

[dependencies.sqlx]
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]
version = "0.5.7"

[dev-dependencies]
actix-rt = "2"
claim = "0.5.0"
fake = "~2.3"
once_cell = "1.8.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
reqwest = "0.11"
tokio = "1"
